--- a/resources/assets/front/sass/_lists.scss
+++ b/resources/assets/front/sass/_lists.scss
@@ -143,7 +143,11 @@
 		&.small {
 			font-size: .7em;
 		}
-	}
+    }
+    
+    .media-avatar {
+        min-height: 45px;
+    }
 
 	&.new {
 		.media-counter, a.media-counter:link, a.media-counter:visited {
